--- a/eladmin-system/src/main/resources/config/application.yml
+++ b/eladmin-system/src/main/resources/config/application.yml
@@ -26,7 +26,7 @@ spring:
     database: ${REDIS_DB:0}
     host: ${REDIS_HOST:localhost}
     port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:wr.1230.}
+    password: ${REDIS_PWD:}
     #连接超时时间
     timeout: 5000
 
